--- a/CecilBasedAnnotator/CecilBasedAnnotator.csproj
+++ b/CecilBasedAnnotator/CecilBasedAnnotator.csproj
@@ -6,8 +6,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <LangVersion>8</LangVersion>
+    <CodeAnalysisRuleSet>..\TunnelVisionLabs.ReferenceAssemblyAnnotator.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
