--- a/CecilBasedAnnotator/CecilBasedAnnotator.csproj
+++ b/CecilBasedAnnotator/CecilBasedAnnotator.csproj
@@ -10,9 +10,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Mono.Cecil" Version="0.11.0" GeneratePathProperty="true" />
     <PackageDownload Include="Microsoft.NETFramework.ReferenceAssemblies.net45" Version="[1.0.0-preview.2]" />
     <PackageDownload Include="Microsoft.NETCore.App.Ref" Version="[3.0.0-preview8-28405-07]" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TunnelVisionLabs.ReferenceAssemblyAnnotator\TunnelVisionLabs.ReferenceAssemblyAnnotator.csproj" />
   </ItemGroup>
 
 </Project>
