--- a/TunnelVisionLabs.ReferenceAssemblyAnnotator/TunnelVisionLabs.ReferenceAssemblyAnnotator.props
+++ b/TunnelVisionLabs.ReferenceAssemblyAnnotator/TunnelVisionLabs.ReferenceAssemblyAnnotator.props
@@ -3,8 +3,15 @@
 
   <PropertyGroup>
     <!-- Folder containing TunnelVisionLabs.ReferenceAssemblyAnnotator.dll -->
-    <ReferenceAssemblyAnnotatorBuildTaskPath Condition="'$(MSBuildRuntimeType)' != 'Core'">..\tools\net472</ReferenceAssemblyAnnotatorBuildTaskPath>
-    <ReferenceAssemblyAnnotatorBuildTaskPath Condition="'$(MSBuildRuntimeType)' == 'Core'">..\tools\netstandard2.0</ReferenceAssemblyAnnotatorBuildTaskPath>
+    <ReferenceAssemblyAnnotatorBuildTaskPath Condition="'$(MSBuildRuntimeType)' != 'Core'">..\tools\net472\</ReferenceAssemblyAnnotatorBuildTaskPath>
+    <ReferenceAssemblyAnnotatorBuildTaskPath Condition="'$(MSBuildRuntimeType)' == 'Core'">..\tools\netstandard2.0\</ReferenceAssemblyAnnotatorBuildTaskPath>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <AnnotateReferenceAssembliesDependsOn>
+      ResolveAvailableReferenceAssemblies;
+      ResolveOutputReferenceAssemblies
+    </AnnotateReferenceAssembliesDependsOn>
   </PropertyGroup>
 
 </Project>
