Update to StyleCop Analyzers 1.2.0-beta.66

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -31,7 +31,7 @@
 
   <!-- Code style -->
   <ItemGroup>
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="all" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.66" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
