--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -29,6 +29,11 @@
     <AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)build\Key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
+  <!-- Use the 16.3 compiler -->
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Net.Compilers" Version="3.3.0-beta2-final" PrivateAssets="all" />
+  </ItemGroup>
+
   <!-- Code style -->
   <ItemGroup>
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.66" PrivateAssets="all" />
