Exclude assemblies that don't have an annotated reference assembly

--- a/TunnelVisionLabs.ReferenceAssemblyAnnotator/TunnelVisionLabs.ReferenceAssemblyAnnotator.targets
+++ b/TunnelVisionLabs.ReferenceAssemblyAnnotator/TunnelVisionLabs.ReferenceAssemblyAnnotator.targets
@@ -81,10 +81,10 @@
       <_NetStandardReferences Include="@(Reference)"
                               Condition="
                                 '%(NuGetPackageId)' == 'Microsoft.Win32.Primitives'
-                                OR '%(NuGetPackageId)' == 'System.AppContext'
+                                OR '%(NuGetPackageId)' == 'XXXSystem.AppContext'
                                 OR '%(NuGetPackageId)' == 'System.Collections'
                                 OR '%(NuGetPackageId)' == 'System.Collections.Concurrent'
-                                OR '%(NuGetPackageId)' == 'System.Console'
+                                OR '%(NuGetPackageId)' == 'XXXSystem.Console'
                                 OR '%(NuGetPackageId)' == 'System.Diagnostics.Debug'
                                 OR '%(NuGetPackageId)' == 'System.Diagnostics.Tools'
                                 OR '%(NuGetPackageId)' == 'System.Diagnostics.Tracing'
@@ -93,8 +93,8 @@
                                 OR '%(NuGetPackageId)' == 'System.IO'
                                 OR '%(NuGetPackageId)' == 'System.IO.Compression'
                                 OR '%(NuGetPackageId)' == 'System.IO.Compression.ZipFile'
-                                OR '%(NuGetPackageId)' == 'System.IO.FileSystem'
-                                OR '%(NuGetPackageId)' == 'System.IO.FileSystem.Primitives'
+                                OR '%(NuGetPackageId)' == 'XXXSystem.IO.FileSystem'
+                                OR '%(NuGetPackageId)' == 'XXXSystem.IO.FileSystem.Primitives'
                                 OR '%(NuGetPackageId)' == 'System.Linq'
                                 OR '%(NuGetPackageId)' == 'System.Linq.Expressions'
                                 OR '%(NuGetPackageId)' == 'System.Net.Http'
@@ -111,10 +111,10 @@
                                 OR '%(NuGetPackageId)' == 'System.Runtime.InteropServices'
                                 OR '%(NuGetPackageId)' == 'System.Runtime.InteropServices.RuntimeInformation'
                                 OR '%(NuGetPackageId)' == 'System.Runtime.Numerics'
-                                OR '%(NuGetPackageId)' == 'System.Security.Cryptography.Algorithms'
-                                OR '%(NuGetPackageId)' == 'System.Security.Cryptography.Encoding'
-                                OR '%(NuGetPackageId)' == 'System.Security.Cryptography.Primitives'
-                                OR '%(NuGetPackageId)' == 'System.Security.Cryptography.X509Certificates'
+                                OR '%(NuGetPackageId)' == 'XXXSystem.Security.Cryptography.Algorithms'
+                                OR '%(NuGetPackageId)' == 'XXXSystem.Security.Cryptography.Encoding'
+                                OR '%(NuGetPackageId)' == 'XXXSystem.Security.Cryptography.Primitives'
+                                OR '%(NuGetPackageId)' == 'XXXSystem.Security.Cryptography.X509Certificates'
                                 OR '%(NuGetPackageId)' == 'System.Text.Encoding'
                                 OR '%(NuGetPackageId)' == 'System.Text.Encoding.Extensions'
                                 OR '%(NuGetPackageId)' == 'System.Text.RegularExpressions'
@@ -163,10 +163,10 @@
       <UnannotatedReferenceAssembly Include="@(Reference->'%(FileName)')"
                                     Condition="Exists('$(AnnotatedReferenceAssemblyDirectory)%(Reference.FileName)%(Reference.Extension)')
                                       AND ('%(Reference.NuGetPackageId)' == 'Microsoft.Win32.Primitives'
-                                        OR '%(Reference.NuGetPackageId)' == 'System.AppContext'
+                                        OR '%(Reference.NuGetPackageId)' == 'XXXSystem.AppContext'
                                         OR '%(Reference.NuGetPackageId)' == 'System.Collections'
                                         OR '%(Reference.NuGetPackageId)' == 'System.Collections.Concurrent'
-                                        OR '%(Reference.NuGetPackageId)' == 'System.Console'
+                                        OR '%(Reference.NuGetPackageId)' == 'XXXSystem.Console'
                                         OR '%(Reference.NuGetPackageId)' == 'System.Diagnostics.Debug'
                                         OR '%(Reference.NuGetPackageId)' == 'System.Diagnostics.Tools'
                                         OR '%(Reference.NuGetPackageId)' == 'System.Diagnostics.Tracing'
@@ -175,8 +175,8 @@
                                         OR '%(Reference.NuGetPackageId)' == 'System.IO'
                                         OR '%(Reference.NuGetPackageId)' == 'System.IO.Compression'
                                         OR '%(Reference.NuGetPackageId)' == 'System.IO.Compression.ZipFile'
-                                        OR '%(Reference.NuGetPackageId)' == 'System.IO.FileSystem'
-                                        OR '%(Reference.NuGetPackageId)' == 'System.IO.FileSystem.Primitives'
+                                        OR '%(Reference.NuGetPackageId)' == 'XXXSystem.IO.FileSystem'
+                                        OR '%(Reference.NuGetPackageId)' == 'XXXSystem.IO.FileSystem.Primitives'
                                         OR '%(Reference.NuGetPackageId)' == 'System.Linq'
                                         OR '%(Reference.NuGetPackageId)' == 'System.Linq.Expressions'
                                         OR '%(Reference.NuGetPackageId)' == 'System.Net.Http'
@@ -193,10 +193,10 @@
                                         OR '%(Reference.NuGetPackageId)' == 'System.Runtime.InteropServices'
                                         OR '%(Reference.NuGetPackageId)' == 'System.Runtime.InteropServices.RuntimeInformation'
                                         OR '%(Reference.NuGetPackageId)' == 'System.Runtime.Numerics'
-                                        OR '%(Reference.NuGetPackageId)' == 'System.Security.Cryptography.Algorithms'
-                                        OR '%(Reference.NuGetPackageId)' == 'System.Security.Cryptography.Encoding'
-                                        OR '%(Reference.NuGetPackageId)' == 'System.Security.Cryptography.Primitives'
-                                        OR '%(Reference.NuGetPackageId)' == 'System.Security.Cryptography.X509Certificates'
+                                        OR '%(Reference.NuGetPackageId)' == 'XXXSystem.Security.Cryptography.Algorithms'
+                                        OR '%(Reference.NuGetPackageId)' == 'XXXSystem.Security.Cryptography.Encoding'
+                                        OR '%(Reference.NuGetPackageId)' == 'XXXSystem.Security.Cryptography.Primitives'
+                                        OR '%(Reference.NuGetPackageId)' == 'XXXSystem.Security.Cryptography.X509Certificates'
                                         OR '%(Reference.NuGetPackageId)' == 'System.Text.Encoding'
                                         OR '%(Reference.NuGetPackageId)' == 'System.Text.Encoding.Extensions'
                                         OR '%(Reference.NuGetPackageId)' == 'System.Text.RegularExpressions'
