Report a build error if 'AnnotatedReferenceAssemblyVersion' is not defined

--- a/TunnelVisionLabs.ReferenceAssemblyAnnotator/TunnelVisionLabs.ReferenceAssemblyAnnotator.targets
+++ b/TunnelVisionLabs.ReferenceAssemblyAnnotator/TunnelVisionLabs.ReferenceAssemblyAnnotator.targets
@@ -55,6 +55,8 @@
           Inputs="@(AvailableUnannotatedReferenceAssembly);@(AnnotatedReferenceAssembly)"
           Outputs="@(UnannotatedReferenceAssembly->'%(OutputAssembly)')">
 
+    <Error Condition="'$(AnnotatedReferenceAssemblyVersion)' == ''" Text="The 'AnnotatedReferenceAssemblyVersion' build property was not set." Code="RA0000" />
+
     <AnnotatorBuildTask
       UnannotatedReferenceAssembly="%(UnannotatedReferenceAssembly.Identity)"
       TargetFrameworkDirectories="@(AvailableUnannotatedReferenceAssemblyDirectory)"
