--- a/.editorconfig
+++ b/.editorconfig
@@ -65,7 +65,7 @@ dotnet_code_quality_unused_parameters = all:suggestion
 
 # var preferences
 csharp_style_var_elsewhere = false:silent
-csharp_style_var_for_built_in_types = false:none
+csharp_style_var_for_built_in_types = false:warning
 csharp_style_var_when_type_is_apparent = true:silent
 
 # Expression-bodied members
