Respect NoWarn in project

--- a/TunnelVisionLabs.ReferenceAssemblyAnnotator/TunnelVisionLabs.ReferenceAssemblyAnnotator.targets
+++ b/TunnelVisionLabs.ReferenceAssemblyAnnotator/TunnelVisionLabs.ReferenceAssemblyAnnotator.targets
@@ -61,7 +61,8 @@
       UnannotatedReferenceAssembly="%(UnannotatedReferenceAssembly.Identity)"
       TargetFrameworkDirectories="@(AvailableUnannotatedReferenceAssemblyDirectory)"
       AnnotatedReferenceAssemblyDirectory="$(AnnotatedReferenceAssemblyDirectory)"
-      OutputPath="$(AnnotatedReferenceAssemblyOutputPath)">
+      OutputPath="$(AnnotatedReferenceAssemblyOutputPath)"
+      NoWarn="$(NoWarn)">
       <Output ItemName="GeneratedReferenceAssemblies" TaskParameter="GeneratedAssemblies" />
     </AnnotatorBuildTask>
 
