--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -29,9 +29,9 @@
     <AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)build\Key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
-  <!-- Use the 16.3 compiler -->
+  <!-- Use the 16.4 compiler -->
   <ItemGroup>
-    <PackageReference Include="Microsoft.Net.Compilers" Version="3.3.1-beta3-final" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="3.4.0-beta2-final" PrivateAssets="all" />
   </ItemGroup>
 
   <!-- Enable nullable reference types -->
