--- a/tests/MultiTFM/MultiTFM.csproj
+++ b/tests/MultiTFM/MultiTFM.csproj
@@ -1,11 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net35;net48;netstandard1.6;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net35;net48;netstandard1.6;netstandard2.0;netcoreapp1.0</TargetFrameworks>
     <LangVersion>8</LangVersion>
     <Nullable>enable</Nullable>
     <AnnotatedReferenceAssemblyVersion>3.0.0</AnnotatedReferenceAssemblyVersion>
     <NoWarn>RA1000</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <!-- NuGet cannot restore packages for netcoreapp1.0: https://github.com/NuGet/Home/issues/7414 -->
+    <DisableImplicitNuGetFallbackFolder>true</DisableImplicitNuGetFallbackFolder>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(TargetFramework)' == 'netcoreapp1.0'">
+    <!-- CS1701: Assuming assembly reference "Assembly Name #1" matches "Assembly Name #2", you may need to supply runtime policy -->
+    <NoWarn>$(NoWarn),CS1701</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
