Add netcoreapp2.0 to the test matrix

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,6 +26,8 @@ test_script:
 - msbuild /restore tests/SingleTFM /p:TestFramework=netcoreapp1.0 /p:DisableImplicitNuGetFallbackFolder=true /warnaserror /v:m
 - git clean -dxf tests
 - msbuild /restore tests/SingleTFM /p:TestFramework=netcoreapp1.1 /p:DisableImplicitNuGetFallbackFolder=true /warnaserror /v:m
+- git clean -dxf tests
+- msbuild /restore tests/SingleTFM /p:TestFramework=netcoreapp2.0 /warnaserror /v:m
 
 - git clean -dxf tests
 - dotnet msbuild -restore tests/MultiTFM -warnaserror -v:m
@@ -47,5 +49,8 @@ test_script:
 - taskkill /im dotnet.exe /f
 - git clean -dxf tests
 - dotnet msbuild -restore tests/SingleTFM -p:TestFramework=netcoreapp1.1 -p:DisableImplicitNuGetFallbackFolder=true -warnaserror -v:m
+- taskkill /im dotnet.exe /f
+- git clean -dxf tests
+- dotnet msbuild -restore tests/SingleTFM -p:TestFramework=netcoreapp2.0 -warnaserror -v:m
 artifacts:
 - path: 'TunnelVisionLabs.ReferenceAssemblyAnnotator\**\*.nupkg'
